# torchvulkan

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: test_torchvulkan.yml
examples/: main.py
scripts/: build_shaders.py  config.py  pack_shaders.py
scripts/shaders/: binaryop.py  copy.py
src/api/: backend.cpp  guard.cpp  helpers.h  hook.cpp  ops.cpp
src/api/ops/: binary.cpp  binary.h  factory.cpp  factory.h  helpers.h  matmul.cpp  matmul.h
src/shaders/: CMakeLists.txt  binaryop.slang  binaryop.slang.j2  binaryop_contig.comp  binaryop_noncontig.comp  cast.slang.j2  copy.slang  copy.slang.j2  matmul.slang.j2
src/shaders/helpers/: int_divider.slang
src/vulkan/: allocator.cpp  allocator.h  cache.cpp  cache.h  device_context.cpp  device_context.h  memory.cpp  memory.h  shader.cpp  shader.h  vulkan_context.cpp  vulkan_context.h
tests/: test_binary_ops.py  test_memory.py  test_pytorch_ops.py
torchvulkan/: __init__.py
