[build-system]
requires = ["torch", "scikit-build-core", "setuptools_scm"]
build-backend = "scikit_build_core.build"

[project]
name = "torchvulkan"
dynamic = ["version"]
dependencies = ["torch"]

[tool.scikit-build]
editable.mode = "redirect"
build-dir = "build/{wheel_tag}"
wheel.packages = ["torchvulkan"]
cmake.build-type = "Release"

metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["torchvulkan/_version.py"] 

[tool.setuptools_scm]
write_to = "torchvulkan/_version.py"